--- a/index.css
+++ b/index.css
@@ -25,9 +25,9 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 15%;
+    height: 14%;
 }
-#main{
+#main, #about{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,20 +35,20 @@ body{
     height: 70%;
     width: 100%;
 }
-#about{
+#create{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    width: 80%;
-    margin: 5px 0px 0px 0px;
-    padding: 15px;
+    align-items: center;
+    justify-content: flex-end;
+    height: 70%;
+    width: 100%;
 }
 #footer{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    height: 10%;
+    height: 15%;
 }
 .nav{
     font-weight: bold;
