--- a/index.css
+++ b/index.css
@@ -27,6 +27,22 @@ body{
     width: 100%;
     height: 14%;
 }
+#main{
+    overflow: auto;
+}
+#main::-webkit-scrollbar {
+    width: 4px;
+}
+#main::-webkit-scrollbar-track {
+    background-color: #68686813;
+}
+#main::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e49;
+    border-radius: 5px;
+}
+#main::-webkit-scrollbar-thumb:hover {
+    background-color: #5555554d;
+}
 #main, #about{
     display: flex;
     flex-direction: column;
