--- a/index.css
+++ b/index.css
@@ -76,3 +76,14 @@ body{
 .nav:hover{
     color: #505050;
 }
+
+.card{
+    width: 80%;
+    margin: 10px 0px 0px 0px;
+    padding: 15px;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 12px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(17px);
+    -webkit-backdrop-filter: blur(17px);
+}
