--- a/components/CardInput.css
+++ b/components/CardInput.css
@@ -31,6 +31,8 @@
     width: 85%;
     height: 10%;
     padding: 10px;
+    font-size: 12px;
+    letter-spacing: 2px;
     background: rgba(255, 255, 255, 0);
     border-radius: 12px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -38,8 +40,8 @@
     -webkit-backdrop-filter: blur(3.4px);
     border: 1px solid rgba(255, 255, 255, 0.50);
     transition: all;
-    transition-duration: 2s;
+    transition-duration: 1s;
 }
 #inputButton:hover{
-    letter-spacing: 4px;
+    letter-spacing: 5px;
 }
