--- a/components/AboutPage.css
+++ b/components/AboutPage.css
@@ -7,3 +7,16 @@
     padding: 15px;
     overflow: auto;
 }
+#AboutPage::-webkit-scrollbar {
+    width: 4px;
+}
+#AboutPage::-webkit-scrollbar-track {
+    background-color: #68686813;
+}
+#AboutPage::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e49;
+    border-radius: 5px;
+}
+#AboutPage::-webkit-scrollbar-thumb:hover {
+    background-color: #5555554d;
+}
